[package]
name = "ros2_tvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#r2r = "0.6.2"
r2r = { git = "https://github.com/sequenceplanner/r2r" }
opencv = {version = "0.64.0", features = ["clang-runtime"]}
tokio = { version = "0.3", features = ["full"] }
ndarray = "0.15"
anyhow = "1.0.57"
futures = "0.3.19"

tvm =  { path = "/home/sean/mylibs/tvm/rust/tvm" }
tvm-rt =  { path = "/home/sean/mylibs/tvm/rust/tvm-rt" }
tvm-sys =  { path = "/home/sean/mylibs/tvm/rust/tvm-sys" }
image = "0.24.2"